--- a/index.html
+++ b/index.html
@@ -2,9 +2,209 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Horse Club</title>
+	<title>Horse Club &#8739; Home</title>
+	<link rel="stylesheet" href="css/main.css">
+	<script src="js/jquery-1.7.min.js"></script>
+	<script src="js/jquery.easing.1.3.js"></script>
+	<script src="js/tms-0.4.1.js"></script>
+	<script src="js/init.js"></script>
+	<!--[if lt IE 8]>
+       <div style=' clear: both; text-align:center; position: relative;'>
+         <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode">
+           <img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." />
+        </a>
+      </div>
+    <![endif]-->
 </head>
 <body>
-	
+	<!-- header -->
+	<div class="container">
+		<header class="header">
+			<div class="clearfix">
+				<img src="img/content/logo.png" alt="Horse Club" class="logo" />
+				<div class="social">
+					<span>Follow Us:</span>
+					<img src="img/icons/social_twitter.png" alt="twitter" />
+					<img src="img/icons/social_facebook.png" alt="facebook" />
+					<img src="img/icons/social_plus.png" alt="" />
+				</div>
+			</div>
+			<nav class="nav">
+				<ul class="nav__list">
+					<li class="nav__item">
+						<a href="#" class="nav__link active">home</a>
+					</li>
+					<li class="nav__item">
+						<a href="breeding.html" class="nav__link">breeding</a>
+					</li>
+					<li class="nav__item">
+						<a href="horsesale.html" class="nav__link">horsesale</a>
+					</li>
+					<li class="nav__item">
+						<a href="events.html" class="nav__link">events</a>
+					</li>
+					<li class="nav__item">
+						<a href="gallery.html" class="nav__link">gallery</a>
+					</li>
+					<li class="nav__item">
+						<a href="contacts.html" class="nav__link">contacts</a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+	</div>
+	<!-- slider -->
+	<div id="slide">
+		<div class="slider">
+	        <ul class="items">
+	            <li>
+	            	<img src="img/content/slider-1.jpg" alt="" />
+	            	<div class="banner">
+	            		<p class="extra-wrap">
+	            			<strong>The most reputable horse breeder</strong>
+	            			<span>Lorem ipsum dolor sit amet, consetetur sadipscing elitr sed diam nonumy</span>
+	            		</p>
+	            		<a href="#">Read More</a>
+	            	</div>
+	            </li> 
+	            <li>
+	            	<img src="img/content/slider-2.jpg" alt="" />
+	            	<div class="banner">
+	            		<p class="extra-wrap">
+	            			<strong>Want a stable friendship? Get a horse!</strong>
+	            			<span>Dolor sit amet, consetetur sadipscing elitr sed diam nonumy</span>
+	            		</p>
+	            		<a href="#">Read More</a>
+	            	</div>
+	            </li>
+	            <li>
+	            	<img src="img/content/slider-3.jpg" alt="" />
+	            	<div class="banner">
+	            		<p class="extra-wrap">
+	            			<strong>We can care about your horses!</strong>
+	            			<span>Consetetur sadipscing elitr sed diam nonumy</span>
+	            		</p>
+	            		<a href="#">Read More</a>
+	            	</div>
+	            </li>
+	        </ul>
+	    </div>
+	</div>
+    <a href="#" class="prev"></a>
+    <a href="#" class="next"></a>
+    <div class="container">
+    	<div class="l_grid margin-top-3 padding-bottom-3">
+    		<div class="l_large_4">
+    			<div class="thumbnail">
+    				<img src="img/content/horses_1.png" alt="" class="thumbnail__img">
+    				<h1 class="thumbnail__heading thumbnail__heading_link">Horse <span>Breeding</span>
+    					<img src="img/icons/go.png" alt="" />
+    				</h1>
+    			</div>
+    		</div>
+    		<div class="l_large_4">
+    			<div class="thumbnail">
+    				<img src="img/content/horses_2.png" alt="" class="thumbnail__img">
+    				<h1 class="thumbnail__heading thumbnail__heading_link">horse <span>sale</span>
+    					<img src="img/icons/go.png" alt="" />
+    				</h1>
+    			</div>
+    		</div>
+    		<div class="l_large_4">
+    			<div class="thumbnail">
+    				<img src="img/content/horses_3.png" alt="" class="thumbnail__img">
+    				<h1 class="thumbnail__heading thumbnail__heading_link">horse <span>events</span>
+    					<img src="img/icons/go.png" alt="" />
+    				</h1>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="pix-divider"></div>
+    	<div class="l_grid padding-bottom-2">
+    		<div class="l_large_4">
+    			<div class="thumbnail">
+    				<h2 class="thumbnail__heading">Welcome!</h2>
+    				<img src="img/content/info_07.png" alt="" class="thumbnail__img">
+					<h3 class="thumbnail__subheading">Lorem ipsum dolor sit amet.</h3>
+					<p class="thumbnail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, vel, aliquam? Maiores officiis nesciunt ipsa magni cum rerum velit molestias dolores ut quos, amet enim.</p>
+					<a href="#" class="thumbnail__btn">read more</a>
+    			</div>
+    		</div>
+    		<div class="l_large_4">
+				<div class="padding-left-1">
+					<h2 class="heading-2 capitalize">our breeds</h2>
+					<ol class="ol-lg">
+						<li class="ol-lg__item">
+							<h3 class="heading-3">Lorem ipsum dolor.</h3>
+							<p class="paragraph no-overflow">Lorem ipsum dolor sit amet, <a href="#" class="link">consectetur adipisicing</a> elit. Lorem ipsum dolor.</p>
+						</li>
+						<li class="ol-lg__item">
+							<h3 class="heading-3">Lorem ipsum dolor.</h3>
+							<p class="paragraph no-overflow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem quia!</p>
+						</li>
+						<li class="ol-lg__item">
+							<h3 class="heading-3">Lorem ipsum dolor.</h3>
+							<p class="paragraph no-overflow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium tenetur.</p>
+						</li>
+					</ol>
+				</div>
+    		</div>
+    		<div class="l_large_4">
+				<div class="padding-left-2">
+					<h2 class="heading-2 capitalize">recent events</h2>
+					<div class="media">
+						<img src="img/content/info_1.png" alt="" class="media__img" />
+						<h1 class="media__heading">Lorem ipsum dolor</h1>
+						<a href="#" class="media__date">May 2, 2012</a href="#">
+						<p class="media__text paragraph no-overflow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt commodi ipsa error!</p>
+					</div>
+					<div class="media">
+						<img src="img/content/info_2.png" alt="" class="media__img" />
+						<h1 class="media__heading">Lorem ipsum dolor</h1>
+						<a href="#" class="media__date">May 1, 2012</a href="#">
+						<p class="media__text paragraph no-overflow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti voluptatibus qui iusto!</p>
+					</div>
+				</div>
+    		</div>
+    	</div>
+    	<div class="pix-divider"></div>
+    	<div class="l_grid">
+    		<div class="l_large_3">
+				<h2 class="heading-2 capitalize">why us</h2>
+				<ul class="list">
+					<li class="list__item">Nam liber tepor cum</li>
+					<li class="list__item">Soluta nobeleifend option</li>
+					<li class="list__item">Congue nie imperdientg</li>
+				</ul>
+    		</div>
+    		<div class="l_large_3">
+				<h2 class="heading-2 capitalize">address</h2>
+				<dl class="key-value">
+					<div class="key-value__item">
+						<dt class="key-value__key">Country</dt>
+						<dd class="key-value__value">Russia</dd>
+					</div>
+					<div class="key-value__item">
+						<dt class="key-value__key">City</dt>
+						<dd class="key-value__value">Izhevsk</dd>
+					</div>
+					<div class="key-value__item">
+						<dt class="key-value__key">Email</dt>
+						<dd class="key-value__value"><a class="link" href="mailto:horses@mail.com">horses@mail.com</a></dd>
+					</div>
+				</dl>
+    		</div>
+    		<div class="l_large_3">
+				<h2 class="heading-2 capitalize">newsletter</h2>
+				<div class="form">
+					<input type="text" class="input"><input type="submit" value="" class="search-btn">
+				</div>
+    		</div>
+    		<div class="l_large_3">
+				<p class="paragraph">&copy; 2014 Horse Club</p>
+				<p class="paragraph"><a href="#" class="link">Website Template</a> by TemplateMonster.com</p>
+    		</div>
+    	</div>
+    </div>
 </body>
 </html>
