see #2 add second page (Breeding)

--- a/breeding.html
+++ b/breeding.html
@@ -40,6 +40,97 @@
 				</ul>
 			</nav>
 		</header>
+		<h2 class="heading-2 capitalize">breeding stallions</h2>
+		<div class="l_grid padding-bottom-3">
+			<div class="l_large_4">
+				<div class="thumbnail">
+					<img src="img/content/page2-img1.jpg" alt="" class="thumbnail__img">
+					<h3 class="thumbnail__subheading">Lorem ipsum.</h3>
+					<p class="thumbnail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste dolore nam maiores ad, officia aliquid voluptate.</p>
+					<a href="" class="thumbnail__btn">read more</a>
+				</div>
+			</div>
+			<div class="l_large_4">
+				<div class="thumbnail">
+					<img src="img/content/page2-img2.jpg" alt="" class="thumbnail__img">
+					<h3 class="thumbnail__subheading">Lorem ipsum.</h3>
+					<p class="thumbnail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et aspernatur officiis iusto expedita provident maxime hic.</p>
+					<a href="" class="thumbnail__btn">read more</a>
+				</div>
+			</div>
+			<div class="l_large_4">
+				<div class="thumbnail">
+					<img src="img/content/page2-img3.jpg" alt="" class="thumbnail__img">
+					<h3 class="thumbnail__subheading">Lorem ipsum.</h3>
+					<p class="thumbnail__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum ut consequuntur facilis repellendus doloremque quos omnis.</p>
+					<a href="" class="thumbnail__btn">read more</a>
+				</div>
+			</div>
+		</div>
+    	<div class="pix-divider"></div>
+    	<div class="l_grid">
+    		<div class="l_large_4">
+				<h2 class="heading-2 capitalize">horse breeds</h2>
+				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex optio ea amet quia, iste dicta dolor impedit sint! Irony is a dead scene. Authentic food truck viral cornhole.</p>
+				<ul class="list white">
+					<li class="list__item">Slow-carb Schlitz skateboard</li>
+					<li class="list__item">Tonx High Life wolf</li>
+					<li class="list__item">McSweeney's fap pork belly </li>
+					<li class="list__item">Lorem ipsum dolor sit amet.</li>
+					<li class="list__item">Cosby sweater flexitarian</li>
+					<li class="list__item">Irony small batch freegan</li>
+				</ul>
+    		</div>
+    		<div class="l_large_8">
+				<h2 class="heading-2 capitalize">breeding stallions</h2>
+				<div class="media">
+					<img src="img/content/page2-img4.jpg" alt="" class="media__img">
+					<h3 class="media__subheading">Yr Echo Park jean shorts, Williamsburg butcher synth selvage Godard hoodie fap American Apparel chia forage. Mustache Pinterest roof party drinking vinegar Godard dreamcatcher.</h3>
+					<p class="media__text paragraph">Cardigan Thundercats PBR&amp;B, shabby chic try-hard typewriter quinoa church-key readymade salvia cornhole wayfarers Helvetica tattooed. Sustainable cornhole craft beer bitters shabby chic 3 wolf moon, authentic irony PBR&amp;B Banksy before they sold out fixie. Ugh kale chips retro readymade squid.</p>
+					<p class="media__text paragraph">Aesthetic Kickstarter pork belly polaroid, locavore organic tousled readymade letterpress 3 wolf moon pug swag. Authentic food truck viral cornhole, hoodie pickled Brooklyn fixie wolf salvia retro wayfarers drinking vinegar.</p>
+				</div>
+    		</div>
+    	</div>
+    	<div class="pix-divider"></div>
+    	<footer class="footer">
+    		<div class="l_grid">
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">why us</h2>
+					<ul class="list">
+						<li class="list__item">Nam liber tepor cum</li>
+						<li class="list__item">Soluta nobeleifend option</li>
+						<li class="list__item">Congue nie imperdientg</li>
+					</ul>
+    			</div>
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">address</h2>
+					<dl class="key-value">
+						<div class="key-value__item">
+							<dt class="key-value__key">Country</dt>
+							<dd class="key-value__value">Russia</dd>
+						</div>
+						<div class="key-value__item">
+							<dt class="key-value__key">City</dt>
+							<dd class="key-value__value">Izhevsk</dd>
+						</div>
+						<div class="key-value__item">
+							<dt class="key-value__key">Email</dt>
+							<dd class="key-value__value"><a class="link" href="mailto:horses@mail.com">horses@mail.com</a></dd>
+						</div>
+					</dl>
+    			</div>
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">newsletter</h2>
+					<div class="form">
+						<input type="text" class="input"><input type="submit" value="" class="search-btn">
+					</div>
+    			</div>
+    			<div class="l_large_3">
+					<p class="paragraph">&copy; 2014 Horse Club</p>
+					<p class="paragraph"><a href="#" class="link">Website Template</a> by TemplateMonster.com</p>
+    			</div>
+    		</div>
+    	</footer>
 	</div>
 </body>
 </html>
