--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
     		<div class="l_large_4">
 				<div class="padding-left-2">
 					<h2 class="heading-2 capitalize">recent events</h2>
-					<div class="media">
+					<div class="media media_bordered">
 						<img src="img/content/info_1.png" alt="" class="media__img" />
 						<h1 class="media__heading">Lorem ipsum dolor</h1>
 						<a href="#" class="media__date">May 2, 2012</a href="#">
 						<p class="media__text paragraph no-overflow">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt commodi ipsa error!</p>
 					</div>
-					<div class="media">
+					<div class="media media_bordered">
 						<img src="img/content/info_2.png" alt="" class="media__img" />
 						<h1 class="media__heading">Lorem ipsum dolor</h1>
 						<a href="#" class="media__date">May 1, 2012</a href="#">
@@ -168,43 +168,45 @@
     		</div>
     	</div>
     	<div class="pix-divider"></div>
-    	<div class="l_grid">
-    		<div class="l_large_3">
-				<h2 class="heading-2 capitalize">why us</h2>
-				<ul class="list">
-					<li class="list__item">Nam liber tepor cum</li>
-					<li class="list__item">Soluta nobeleifend option</li>
-					<li class="list__item">Congue nie imperdientg</li>
-				</ul>
-    		</div>
-    		<div class="l_large_3">
-				<h2 class="heading-2 capitalize">address</h2>
-				<dl class="key-value">
-					<div class="key-value__item">
-						<dt class="key-value__key">Country</dt>
-						<dd class="key-value__value">Russia</dd>
+    	<footer class="footer">
+    		<div class="l_grid">
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">why us</h2>
+					<ul class="list">
+						<li class="list__item">Nam liber tepor cum</li>
+						<li class="list__item">Soluta nobeleifend option</li>
+						<li class="list__item">Congue nie imperdientg</li>
+					</ul>
+    			</div>
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">address</h2>
+					<dl class="key-value">
+						<div class="key-value__item">
+							<dt class="key-value__key">Country</dt>
+							<dd class="key-value__value">Russia</dd>
+						</div>
+						<div class="key-value__item">
+							<dt class="key-value__key">City</dt>
+							<dd class="key-value__value">Izhevsk</dd>
+						</div>
+						<div class="key-value__item">
+							<dt class="key-value__key">Email</dt>
+							<dd class="key-value__value"><a class="link" href="mailto:horses@mail.com">horses@mail.com</a></dd>
+						</div>
+					</dl>
+    			</div>
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">newsletter</h2>
+					<div class="form">
+						<input type="text" class="input"><input type="submit" value="" class="search-btn">
 					</div>
-					<div class="key-value__item">
-						<dt class="key-value__key">City</dt>
-						<dd class="key-value__value">Izhevsk</dd>
-					</div>
-					<div class="key-value__item">
-						<dt class="key-value__key">Email</dt>
-						<dd class="key-value__value"><a class="link" href="mailto:horses@mail.com">horses@mail.com</a></dd>
-					</div>
-				</dl>
+    			</div>
+    			<div class="l_large_3">
+					<p class="paragraph">&copy; 2014 Horse Club</p>
+					<p class="paragraph"><a href="#" class="link">Website Template</a> by TemplateMonster.com</p>
+    			</div>
     		</div>
-    		<div class="l_large_3">
-				<h2 class="heading-2 capitalize">newsletter</h2>
-				<div class="form">
-					<input type="text" class="input"><input type="submit" value="" class="search-btn">
-				</div>
-    		</div>
-    		<div class="l_large_3">
-				<p class="paragraph">&copy; 2014 Horse Club</p>
-				<p class="paragraph"><a href="#" class="link">Website Template</a> by TemplateMonster.com</p>
-    		</div>
-    	</div>
+    	</footer>
     </div>
 </body>
 </html>
