add 3rd page (Horse Sale)

--- a/horsesale.html
+++ b/horsesale.html
@@ -40,6 +40,108 @@
 				</ul>
 			</nav>
 		</header>
+		<div class="grid">
+			<div class="col_lg_9">
+				<h2 class="heading-2 capitalize">Special note</h2>
+			</div>
+			<div class="col_lg_15">
+				<h2 class="heading-2 capitalize">breeding stallions</h2>
+			</div>
+		</div>
+		<div class="grid padding-bottom-3">
+			<div class="col_lg_9">
+				<div class="media">
+					<img src="img/icons/important.png" alt="important" class="media__img">
+					<h3 class="media__subheading">Lorem ipsum dolor sit amet, consectetur. Quidem quas, qui voluptatem</h3>
+					<p class="media__text paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quas, qui voluptatem beatae nostrum delectus ea similique deserunt! Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+				</div>
+				<h2 class="heading-2 capitalize">Special note</h2>
+				<ul class="list white">
+					<li class="list__item">Dolor sit amet, consectetur</li>
+					<li class="list__item">Delectus ea similique deserunt!</li>
+					<li class="list__item">Ohrwaschl so des is a gmahde!</li>
+					<li class="list__item">Praesent nizzle turpizzle daahng dawg</li>
+					<li class="list__item">Curabitur semper faucibizzle bizzle</li>
+					<li class="list__item">Aliquam dang i'm in the shizzle nizzle</li>
+					<li class="list__item">Boofron erizzle shizznit</li>
+					<li class="list__item">Fo shizzle mah nizzle fo rizzle</li>
+					<li class="list__item">Pellentesque dignissizzle</li>
+				</ul>
+			</div>
+			<div class="col_lg_5">
+				<div class="padding-left-1">
+					<div class="thumbnail">
+						<img src="img/content/page3-img1.jpg" alt="" class="thumbnail__img">
+						<h3 class="thumbnail__subheading">Kindling the energy</h3>
+						<p class="paragraph white">Culture concept of the number one inconspicuous motes of rock and gas</p>
+						<p class="thumbnail__text">Great turbulent clouds, how far away, the only home we've ever known! Are creatures of the cosmos. The ash of stellar?</p>
+						<a href="#" class="thumbnail__btn">Read More</a>
+					</div>
+				</div>
+			</div>
+			<div class="col_lg_5">
+				<div class="padding-left-1">
+					<div class="thumbnail">
+						<img src="img/content/page3-img2.jpg" alt="" class="thumbnail__img">
+						<h2 class="thumbnail__subheading">Another world culture</h2>
+						<p class="paragraph white">A billion trillion vastness is bearable only through love at the edge of forever Drake.</p>
+						<p class="thumbnail__text">Culture concept of the number one inconspicuous motes of rock and gas radio telescope tendrils of gossamer clouds hearts.</p>
+						<a href="#" class="thumbnail__btn">Read More</a>
+					</div>
+				</div>
+			</div>
+			<div class="col_lg_5">
+				<div class="padding-left-1">
+					<div class="thumbnail">
+						<img src="img/content/page3-img3.jpg" alt="" class="thumbnail__img">
+						<h3 class="thumbnail__subheading">Extraplanet vastness</h3>
+						<p class="paragraph white">Apollonius of Perga Sea of Tranquility, something incredible is waiting.</p>
+						<p class="thumbnail__text">Extraplanetary vastness is bearable only through love great turbulent clouds. Cosmic ocean explorations Hypatia the sky calls to us.</p>
+						<a href="#" class="thumbnail__btn">Read More</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="pix-divider"></div>
+    	<footer class="footer">
+    		<div class="l_grid">
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">why us</h2>
+					<ul class="list">
+						<li class="list__item">Nam liber tepor cum</li>
+						<li class="list__item">Soluta nobeleifend option</li>
+						<li class="list__item">Congue nie imperdientg</li>
+					</ul>
+    			</div>
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">address</h2>
+					<dl class="key-value">
+						<div class="key-value__item">
+							<dt class="key-value__key">Country</dt>
+							<dd class="key-value__value">Russia</dd>
+						</div>
+						<div class="key-value__item">
+							<dt class="key-value__key">City</dt>
+							<dd class="key-value__value">Izhevsk</dd>
+						</div>
+						<div class="key-value__item">
+							<dt class="key-value__key">Email</dt>
+							<dd class="key-value__value"><a class="link" href="mailto:horses@mail.com">horses@mail.com</a></dd>
+						</div>
+					</dl>
+    			</div>
+    			<div class="l_large_3">
+					<h2 class="heading-2 capitalize">newsletter</h2>
+					<div class="form">
+						<input type="text" class="input"><input type="submit" value="" class="search-btn">
+					</div>
+    			</div>
+    			<div class="l_large_3">
+					<p class="paragraph">&copy; 2014 Horse Club</p>
+					<p class="paragraph"><a href="#" class="link">Website Template</a> by TemplateMonster.com</p>
+    			</div>
+    		</div>
+    	</footer>
 	</div>
 </body>
 </html>
